--- a/app/globals.css
+++ b/app/globals.css
@@ -195,11 +195,11 @@ a {
   color: #333;
   -webkit-text-stroke-width: 1;
   -webkit-text-stroke-color: var(--Blue10, rgba(60, 30, 90, 0.1));
-  font-family: "Nunito Sans";
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  font-family: "Nunito Sans" !important;
+  font-size: 12px !important;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  line-height: normal !important;
 }
 .weeklyDiv {
   display: inline-flex;
